Add action to deploy latest

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
     steps:
       - uses: actions/checkout@v3
@@ -40,11 +40,19 @@ jobs:
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
       - name: Build and push Docker image
+        id: container
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+      - name: yq - portable yaml processor
+        uses: mikefarah/yq@v4.35.1
+        with:
+          cmd: yq -i '.spec.containers[0].image = "ghcr.io/choste/time@${{ steps.container.outputs.digest }}"' 'manifests/pod.yaml'
+      - uses: EndBug/add-and-commit@v9
+        with:
+          message: '[skip ci] update image digest'
+          default_author: github_actions
