--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,6 +14,8 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: file:./dev.db
     permissions:
       contents: write
       packages: write
@@ -33,6 +35,7 @@ jobs:
       - run: npm ci
       - run: npx playwright install
       - run: npm run build --if-present
+      - run: npm run prisma migrate deploy
       - run: npm test
       - run: npm run lint
       - name: Extract metadata (tags, labels) for Docker
