--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"prisma": "prisma"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
@@ -34,6 +35,7 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"prettier-plugin-tailwindcss": "^0.4.1",
+		"prisma": "^5.3.1",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.2",
@@ -44,6 +46,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@prisma/client": "^5.3.1",
 		"jotai": "^2.2.3"
+	},
+	"prisma": {
+		"seed": "node prisma/seed.js"
 	}
 }
