--- a/catalog.yaml
+++ b/catalog.yaml
@@ -12,6 +12,8 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: personal-project
+  annotations:
+    github.com/project-slug: choste/time
 spec:
   type: website
   lifecycle: experimental
